--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width">
-  <title> 魂书 - soulook - </title>
+  <title> - h-vjass - </title>
   <link rel="shortcut icon" href="/public/img/favicon.ico">
-  <script>
-    // 百度统计
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?e13e4ef966c9c68ff1287d90cd740764";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
   <script src="/public/js/polyfill.min.js"></script>
 </head>
 
