--- a/public/dev.html
+++ b/public/dev.html
@@ -13,8 +13,10 @@
 <body style="width:100vw;height:100vh;margin:0;padding:0;">
 
   <div id="h-container"></div>
-  <script src="/public/js/react.development.js"></script>
-  <script src="/public/js/react-dom.development.js"></script>
+  <script src="/public/js/react.production.min.js"></script>
+  <script src="/public/js/react-dom.production.min.js"></script>
+  <script src="/public/js/react.profiling.min.js"></script>
+  <script src="/public/js/react-dom.profiling.min.js"></script>
   <link type="text/css" rel="stylesheet" href="/public/css/global.css">
 
 </body>
