--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width">
-  <title> - h-vjass - </title>
+  <title> - h-lua - </title>
   <link rel="shortcut icon" href="/public/img/favicon.ico">
   <script src="/public/js/polyfill.min.js"></script>
 </head>
